--- a/scimap/static/scripts/directives/search/search.directive.html
+++ b/scimap/static/scripts/directives/search/search.directive.html
@@ -1,4 +1,5 @@
 <div class="search-directive">
-	<link rel="stylesheet" href="./search-directive.css">
+	<link rel="stylesheet" href="static/scripts/directives/search/search.directive.css">
 	<input type="text">
+	<button ng-click="onSelectBound()"></button>
 </div>
